# event_system

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
doc/latex/: main.tex  presentation_draft.tex  presentation_final.tex
doc/uml/: architecture_diagram.puml  class_diagram.puml  class_diagram_simple.puml  component_diagram.puml  component_diagram_simple.puml  sequence_diagram.puml
docker/: Dockerfile.linux  Dockerfile.windows
docs/: architecture.md
include/: consumer.hpp  event.hpp  event_serializer.hpp  ievent_serializer.hpp  iipc.hpp  iipc_factory.hpp  ipc.hpp  ipc_adapter.hpp  ipc_factory.hpp  producer.hpp  signal_helper.hpp
scripts/: run-clang-format.ps1  run-clang-tidy.ps1
src/: consumer.cpp  event.cpp  event_serializer.cpp  ipc.cpp  ipc_adapter.cpp  ipc_factory.cpp  main.cpp  producer.cpp
test/: consumer_test.cpp  event_test.cpp  fakes.hpp  producer_test.cpp
